# DQ_propella_project

./: .gitignore  README.md  requirements.txt
cluster_duplicate_signals/: README.md  __init__.py  pipeline.py  run_pipeline.py
human_evaluation/: README.md  agreement_detail.csv  analyze_results.py  app.py  document_scores.csv  eyeball.py  generate_pairs.py  generate_scored_inspect.py  pairs.parquet  responses.csv  results.md  sample.parquet  schema.sql  score_documents.py
language confidence scoring/: requirements.txt
llm-gold-standard/: .gitignore  (+6 more)
reranker/: README.md  pyproject.toml
reranker/configs/: finepdfs_swe_latn.yaml  finepdfs_swe_latn_llm.yaml  finepdfs_swe_latn_local.yaml  wizard_finepdfs_swe_latn.yaml
reranker/docs/: implementation_plan.md
reranker/models/: l1_human_pairwise.pkl  l1_human_pairwise.pkl.report.json  l1_pairwise.pkl  l1_pairwise.pkl.report.json  l2_lambdarank.pkl  l2_lambdarank.pkl.report.json
reranker/outputs/: combined_train_reranked.parquet  combined_train_reranked.parquet.report.json  evaluation_report.json  evaluation_report.md  llm_evaluation_report.json  llm_evaluation_report.md
reranker/scripts/: eval_holdout.py  merge_llm_train_extended.py  retrieve_finepdf_features.py
reranker/src/learned_reranker/: __init__.py  artifacts.py  cli.py  config.py  data.py  evaluation.py  features.py  l1.py  l2.py  pipeline.py  schema.py  training.py
reranker/tests/: test_evaluation.py  test_features.py  test_l1_l2.py  test_pipeline.py
reranker/traindata/: LLM_train_extended.csv  LLM_train_extreme_bottom.csv  LLM_train_extreme_top.csv
(+51 files in other folders)
