[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learned-reranker"
version = "0.1.0"
description = "Learned document reranker for Propella-annotated FinePDFs data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.20",
  "lightgbm>=4.0",
  "numpy>=1.24",
  "polars>=0.20",
  "pyarrow>=15.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "rich>=13.0",
  "scikit-learn>=1.3",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
learned-reranker = "learned_reranker.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
